# PCSCSample

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PcscExceptions.cpp  PcscExceptions.h  PcscJni.cpp  PcscJni.h
app/src/main/java/org/simalliance/openmobileapi/service/pcsc/: AlertDFragment.java  ContactReaderFragment.java  PcscException.java  PcscJni.java  PcscSampleActivity.java
app/src/main/res/layout/: activity_pcsc_sample.xml
app/src/main/res/values/: strings.xml
distribution/pcsclite/include/: pcsclite.h
gradle/wrapper/: gradle-wrapper.properties
sentrypcsc/: build.gradle
sentrypcsc/src/androidTest/java/org/simalliance/openmobileapi/service/pcsc/: ExampleInstrumentedTest.java
sentrypcsc/src/main/: AndroidManifest.xml  cpp
sentrypcsc/src/main/java/org/simalliance/openmobileapi/service/pcsc/: PcscException.java  PcscJni.java
sentrypcsc/src/main/res/values/: public.xml  strings.xml
sentrypcsc/src/test/java/org/simalliance/openmobileapi/service/pcsc/: ExampleUnitTest.java
